--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "dependencies": {
-    "dotenv": "^17.2.1"
-  },
   "devDependencies": {
-    "cypress": "^14.5.3"
+    "cypress": "^14.5.3",
+    "dotenv": "^17.2.1"
   }
 }
